move frame page layout to current theme

--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -1,7 +1,7 @@
 {{ define "custom-styles" }}
   <link rel="stylesheet" href="/assets/css/fortuna.css">
 {{ end }}
-{{ define "body" }}
+{{ define "bodyInner" }}
   <div class="wrapper">
     <header class="header">
       {{ partial "nav.html" . }}
