--- a/layouts/partials/frame-page/navbar.html
+++ b/layouts/partials/frame-page/navbar.html
@@ -1,4 +1,4 @@
-<nav id="main-navbar" class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav id="main-navbar" class="navbar is-fixed-top" aria-label="main navigation">
 	<div class="container">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="{{ .Site.BaseURL }}">
