--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -1,7 +1,7 @@
 {{ define "custom-styles" }}
   <link rel="stylesheet" href="/assets/css/builds.css">
 {{ end }}
-{{ define "body" }}
+{{ define "bodyInner" }}
   <div class="overlay">
       <div class="overlay-nav">
           <div class="btn-close"></div>
