--- a/layouts/partials/frame-page/frame-ability-image.html
+++ b/layouts/partials/frame-page/frame-ability-image.html
@@ -1,3 +1,3 @@
 <figure class="image is-1by1">
-	<img class="is-rounded" src="{{ .ability.image }}">
+	<img class="is-rounded" src="{{ .ability.image }}" alt="{{ .ability.name }}">
 </figure>
