--- a/src/styles/frame-page/base/_bulma.scss
+++ b/src/styles/frame-page/base/_bulma.scss
@@ -7,6 +7,9 @@ $navbar-dropdown-border-top: $navbar-background-color;
 $navbar-dropdown-arrow: #ffffff;
 $navbar-tab-hover-background-color: $navbar-background-color;
 
+$link: #ffffff;
+$link-hover: #ffffff;
+
 $card-background-color: #353849;
 
 @import '~bulma/sass/utilities/_all';
