add temporarily footer to frame page

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -105,7 +105,8 @@
 		<div class="container">
 			<div class="columns has-text-left">
 				<div class="column is-offset-2 is-8">
-					<h2 class="frame-page-title">Explore more warframes</h2>
+					<hr />
+					<a href="{{ .Site.BaseURL }}">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.
 				</div>
 			</div>
 				
