--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -42,11 +42,20 @@
                             <ul class="warframes">
                               {{ range .Site.Data.warframebuilds }}
                                 {{ if .builds }}
-                                {{$warframeRoles := delimit .roles " " }}
-                                  <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
-                                    <h2>{{ .title }}</h2>
-                                    <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
-                                  </li>
+                                  {{$warframeRoles := delimit .roles " " }}
+                                  {{ if .link }}
+                                    <li id="{{ .name }}" data-roles="{{ $warframeRoles }}">
+                                      <a href="{{ .link }}" target="_blank">
+                                        <h2>{{ .title }}</h2>
+                                        <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
+                                      </a>
+                                    </li>
+                                  {{ else }}
+                                    <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
+                                      <h2>{{ .title }}</h2>
+                                      <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
+                                    </li>
+                                  {{ end }}
                                 {{ end }}
                               {{ end }}
                             </ul>
