Add frame pages for ember, ivara, and hydroid

--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -41,21 +41,19 @@
                             <br/>
                             <ul class="warframes">
                               {{ range .Site.Data.warframebuilds }}
-                                {{ if .builds }}
-                                  {{$warframeRoles := delimit .roles " " }}
-                                  {{ if .link }}
-                                    <li id="{{ .name }}" data-roles="{{ $warframeRoles }}">
-                                      <a href="{{ .link }}" target="_blank">
-                                        <h2>{{ .title }}</h2>
-                                        <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
-                                      </a>
-                                    </li>
-                                  {{ else }}
-                                    <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
+                                {{$warframeRoles := delimit .roles " " }}
+                                {{ if .link }}
+                                  <li id="{{ .name }}" data-roles="{{ $warframeRoles }}">
+                                    <a href="{{ .link }}" target="_blank">
                                       <h2>{{ .title }}</h2>
                                       <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
-                                    </li>
-                                  {{ end }}
+                                    </a>
+                                  </li>
+                                {{ else if .builds}}
+                                  <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
+                                    <h2>{{ .title }}</h2>
+                                    <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
+                                  </li>
                                 {{ end }}
                               {{ end }}
                             </ul>
