--- a/src/styles/frame-page/_sections.scss
+++ b/src/styles/frame-page/_sections.scss
@@ -1,12 +1,25 @@
-@import '~angled-edges/_angled-edges';
+.hero.is-primary.frame-hero-section {
+	background-color: transparent;
+	position: relative;
+}
+
+.frame-hero-section h1 {
+	border-bottom: solid 2px rgba(255, 255, 255, 0.125);
+}
+
+@include mobile {
+	.frame-hero-section h1 {
+		font-size: 1.5em;
+	}
+	.frame-hero-section p {
+		font-size: 0.8em;
+	}
+}
+
 
 .frame-ability {
 	position: relative;
 	padding-top: 200px;
-//4c5c96
-// 45558d
-//#3f4e85
-//35457d
 }
 
 .frame-first-ability {
@@ -19,23 +32,38 @@
 
 .frame-second-ability {
 	background-color: #455489;
-	// @include angled-edge('outside top', 'upper right', #455489);
 	@include angled-edge('outside bottom', 'lower right', #455489);
 }
 
 .frame-third-ability {
 	background-color: #3f4c7c;
 
-	// @include angled-edge('outside top', 'upper left', #3f4c7c);
 	@include angled-edge('outside bottom', 'lower left', #3f4c7c);
 }
 
 .frame-fourth-ability {
 	background-color: #38446f;
-	// @include angled-edge('outside top', 'upper right', #38446f);
 	@include angled-edge('outside bottom', 'lower right', #38446f);
 }
 
 .abiility-description {
 	color: $white;
+}
+
+
+.frame-builds-section {
+	background-color: #2e3141;
+	padding-top: 150px;
+	padding-bottom: 150px;
+	@include angled-edge('outside bottom', 'lower right', #2e3141);
+}
+
+
+footer.footer {
+	background-color: transparent;
+	padding-top: 150px;
+
+	hr {
+		background: rgba(255, 255, 255, 0.125);
+	}
 }
