--- a/src/styles/warframe-page/index.scss
+++ b/src/styles/warframe-page/index.scss
@@ -2,7 +2,7 @@
 
 @import '~angled-edges/_angled-edges';
 
-@import '../components/frame-list';
+@import '../components/warframe-list';
 
 @import '_bulma';
 @import '_typography';
