--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -3,7 +3,7 @@
 {{- end -}}
 {{- define "styles" -}}
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,700%7CSource+Sans+Pro:300,600,300italic,600italic" type="text/css" media="all">
-	<link rel="stylesheet" href="/assets/css/frame-page/index.css">
+	<link rel="stylesheet" href="/assets/css/warframe-page/index.css">
 {{- end -}}
 {{- define "body" -}}
 <body class="warframe-page" style="background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(46, 49, 65, 0.7)), to(rgba(46, 49, 65, 0.7))), url({{ .Params.image }});background-image: -webkit-linear-gradient(bottom, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});background-image: -o-linear-gradient(bottom, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});background-image: linear-gradient(to top, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});">
@@ -113,7 +113,7 @@
 					{{ if and ($element.link) (ne $element.name (lower $frame.name)) }}
 						<div class="column">
 							<div class="warframe-element" data-roles="any">
-								<a href="{{ $element.link }}" target="_blank">
+								<a href="{{ .link }}" target="_blank">
 									<h2>{{ .title }}</h2>
 									<img src="/images/glyphs/{{ .glyph }}" title="{{ .title }}" alt="{{ .title }}" />
 								</a>
