Rename js script related to warframe-page

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -131,6 +131,6 @@
 				
 		</div>
 	</footer>
-	<script src='/assets/js/frame-page.js'></script>
+	<script src='/assets/js/warframe-page.js'></script>
 </body>
 {{- end -}}
