Add section how to get to fortuna

--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -54,6 +54,21 @@
     <div class="hestia-blogs" style="background-color: #041625">
       <div class="container">
           <div class="row">
+            <div class="col-md-6 archive-post-wrap">
+                <article class="section section-text features-section">
+                  <h2 class="hestia-title" style="color: white;">How To Get To Fortuna</h2>
+                  <p>Getting to Fortuna isn't actually all that difficult and if you've played for any amount of time you have most likely finished all the things you need to do. All you need to do is make your way to the Earth to Venus Junction which <b>requires you to finish Vor's Prize, collect 20 mods, fuse a mod to rank two or higher through the fusion process, and finally equip at least 4 mods onto any weapon or warframe</b>. And all you have to do after that is go from the Earth to Venus Junction where you will kill the specter which will unlock your way to Venus where you will eventually make your way to Fortuna and Orb Vallis through the E Gate and Unda nodes.</p>
+                </article>
+            </div>
+            <div class="col-md-6">
+              <img src="/images/fortuna/how-to-get-to-fortuna.jpg" title="Warframe How to get to Fortuna" alt="Warframe Fortuna - how to reach Fortuna">
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="hestia-blogs" style="background-color: #062137">
+      <div class="container">
+          <div class="row">
               <div class="col-md-12 archive-post-wrap">
                 <h2 class="hestia-title" style="color: white;">Key Features in Warframe Fortuna</h2>
                 <p class="sub-title" style="color: white;">Here are all the new major features you can expect to see from the open-world Venus update.</p>
