update fortuna features info

--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -71,7 +71,7 @@
           <div class="row">
               <div class="col-md-12 archive-post-wrap">
                 <h2 class="hestia-title" style="color: white;">Key Features in Warframe Fortuna</h2>
-                <p class="sub-title" style="color: white;">Here are all the new major features you can expect to see from the open-world Venus update.</p>
+                <p class="sub-title" style="color: white;">Here are all the new major features of the open-world Venus update.</p>
               </div>
               <div class="col-md-12">
                 <div class="col-md-3">
@@ -88,15 +88,18 @@
 
                 <div class="col-md-9">
                     <div class="tab-content fortuna-features-content">
-                      <article class="tab-pane active section section-text features-section" id="fortuna">
-                        <img class="alignleft" width="360" src="/images/fortuna/warframe-orb-vallis-new-open-world.jpg" title="The Orb Vallis, The New Open World" alt="Warframe Fortuna - new open world">
-                        <p>Like in the Plains of Eidolon update, the open-world area of Venus will feature a main trading and social hub. This market area is heavily inspired by Blade Runner with its monolithic elevator and buildings, not to mention plenty of neon lighting. There are canals of liquid coolant running across the settlement, which are being cleaned and refined by the inhabitants. Dotted around the central canal you will find a number of key merchants and NPCs, selling everything from make-your-own Moa pets and kitguns, to fishing supplies and tranq rifles.</p>
-                        <p>Spend some time around the hub and you’ll also learn plenty about the culture of augmented people who toil away in service of the Corpus.</p>
+                      <article class="tab-pane active section section-text features-section row" id="fortuna">
+                        <div class="col-md-6">
+                          <img src="/images/fortuna/warframe-orb-vallis-new-open-world.jpg" title="The Orb Vallis, The New Open World" alt="Warframe Fortuna - new open world">
+                        </div>
+                        <div class="col-md-6">
+                        <p>Located in the eye of a snowstorm, The Orb Vallis was once a scorching wasteland. When the Solaris reactivated the Orokin coolant towers, life reappeared in the Vallis. Giant looming mushrooms sprung from the snow, and four-legged Virminks appeared in the valleys. Through their blood, sweat and tears, the Solaris terraformed this barren region into a beautiful, hospitable world — but the Corpus are destroying its delicate balance in their pursuit of profit.</p>
+                        </div>
                       </article>
                       <article class="tab-pane section section-text features-section" id="solaris">
                         <img class="alignleft" width="360" src="/images/fortuna/warframe-solaris-united-and-fortuna.jpg" title="Solaris United and Fortuna" alt="Warframe New Story Solaris United">
-                        <p>The Tennocon reveal for Warframe Fortuna gave us an early look at some of the characters and conflicts going on in this new Warframe open world. For starters, there are two factions in Fortuna: the Corpus, who are the big bad meanies running things, and Solaris United, a rebel faction working to liberate the people of Fortuna from Corpus debt-slavery.</p>
-                        <p>The leader of the Corpus colony is Nef Anyo, who you may remember from previous quests, while Eudico heads up the Solaris United. So, why are the two groups at odds? The people of Fortuna, the Solaris, are labourers who have been enslaved by the Corpus through mounting debts. They work tirelessly to keep refine and purify the coolant that keeps Venus habitable, while the Corpus profit from their labour. The Solaris United want to take back the planet and ensure nobody else succumbs to debt-slavery. Your role in all of this, naturally, is to use the power of the Tenno to aid the Solaris people.</p>
+                        <p>Down in the underground city of Fortuna, you’ll meet the Solaris: a society of body-augmented individuals who live in debt-internment under Corpus rule. A colony all too familiar with the reality of being “repossessed” — cybernetic limb and organ removal by Nef Anyo’s repo squads. Yet in these cautious times, the Solaris are a hopeful community who pride themselves in their efforts to terraform Venus.</p>
+                        <p>Like in the Plains of Eidolon update, the open-world area of Venus features a main trading and social hub. This market area is heavily inspired by Blade Runner with its monolithic elevator and buildings, not to mention plenty of neon lighting. There are canals of liquid coolant running across the settlement, which are being cleaned and refined by the inhabitants. Dotted around the central canal you will find a number of key merchants and NPCs, selling everything from make-your-own Moa pets and kitguns, to fishing supplies and tranq rifles.</p>
                       </article>
                       <article class="tab-pane section section-text features-section" id="kitguns">
                         <img class="alignleft" width="320" src="/images/fortuna/warframe-build-kitgun-in-fortuna.jpg" title="Build Kitgun in Fortuna" alt="Warframe Build Kitgun in Fortuna">
