--- a/layouts/partials/voidtrader.html
+++ b/layouts/partials/voidtrader.html
@@ -21,5 +21,5 @@
 	</table>
 </div>
 {{ else }}
-	<p>Baro Ki'Teer arrives at {{ dateFormat "Monday, January 2, 2006 15:04 MST" .trader.activation }}</p>
+	<p>Baro Ki'Teer arrives in {{ .trader.location }} at {{ dateFormat "Monday, January 2, 2006 15:04 MST" .trader.activation }}</p>
 {{ end }}
