Load images and twitter timeline in a lazy mode

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,8 +15,7 @@
         <div class="widget widget_text">
             <h5>Follow Us</h5>
             <div class="textwidget">
-                <p><a class="twitter-timeline" href="https://twitter.com/warframeblog?ref_src=twsrc%5Etfw" data-tweet-limit="2">Tweets by warframeblog</a>
-                    <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <p><a class="twitter-timeline lazyload" href="https://twitter.com/warframeblog?ref_src=twsrc%5Etfw" data-tweet-limit="2" data-lang="en" data-script="//platform.twitter.com/widgets.js">Tweets by warframeblog</a>
                 </p>
             </div>
         </div>
